@@ -45,6 +45,7 @@
   Windows users can now just type "beet" at the prompt to run beets.
 * Fixed an occasional bug where Mutagen would complain that a tag was
   already present.
+* Fixed a bug with reading invalid integers from ID3 tags.
 
 1.0b3
 -----
